+ Added: [Suggestion] /lands setowner must now be accepted by the player via /lands accept or via their invites menu